--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+<!--FONT AWESOME-->
+<script src="https://kit.fontawesome.com/59f2e42206.js" crossorigin="anonymous"></script>
+<!--GOOGLE FONT-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
 <body>
   <app-root></app-root>
 </body>
